Fix play2:run command for Java 21 - Add JVM arguments to play2-maven-plugin
Co-authored-by: sntiwari1 <54884367+sntiwari1@users.noreply.github.com>